hphp/hack/test/typecheck/noreturn_typehint_limitation.php.exp
File "noreturn_typehint_limitation.php", line 12, characters 10-17:
Invalid return type (Typing[4110])
File "noreturn_typehint_limitation.php", line 12, characters 22-29:
This is noreturn (throws or exits)
File "noreturn_typehint_limitation.php", line 12, characters 10-17:
It is incompatible with void because this function implicitly returns void
